# tinydim

./: .gitignore  CMakeLists.txt  README.md
include/: Core.h  IO.h  Primitives.h  Symbolic.h  Viewer.h
src/: Viewer.cc
test/: CMakeLists.txt  primitives_test.cc  symbolic_test.cc  viewer_primitives.cc
